--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -3,8 +3,80 @@
 <head>
 <meta charset="UTF-8">
 <title>커뮤니티 게시판</title>
+<!-- 페이지 이동 스크립트  -->
+<script>
+function pagingFormSubmit(currentPage) {
+	var form = document.getElementById('pagingForm');
+	let page = document.querySelector('#page');
+	page.value = currentPage;
+	form.submit();
+}
+</script>
 </head>
 <body>
 
+	<h1 style="text-align: center;">게시판</h1>
+	
+	<table>
+		<tr>
+			<td class="white">전체
+				<span th:text="${navi.totalRecordsCount}"></span>
+			</td>
+			<td class="white" colspan="3"></td>
+			<td class="white">
+				<a th:href="@{/board/write}">글쓰기</a>
+				<a th:href="@{/}">홈</a>
+			</td>
+		</tr>
+		<tr>
+			<th>글번호</th>
+			<th>작성자</th>
+			<th style="width:230px;">제목</th>
+			<th>조회수</th>
+			<th style="width:150px;">작성일</th>
+		</tr>
+		<!-- controller에서 model로 부터 받아온 데이터를 출력하는 부분 -->
+		<tr th:each="board : ${boardList}">
+			<td th:text="${board.boardnum}"></td>
+			<td th:text="${board.userid}"></td>
+			<td>
+				<a th:href="@{/board/read(boardnum=${board.boardnum})}" 
+				   th:text="${board.title}"></a>
+			</td>
+			<td th:text="${board.hits}"></td>
+			<td th:text="${board.inputdate}"></td>
+		</tr>
+	</table>
+
+	<section>
+	<!-- 페이지 이동 링크 -->     
+	<a th:href="|javascript:pagingFormSubmit(${navi.currentPage - navi.pagePerGroup})|">◁◁</a>
+	<a th:href="|javascript:pagingFormSubmit(${navi.currentPage - 1})|">◀</a> 
+
+	<span th:each="counter : ${#numbers.sequence(navi.startPageGroup, navi.endPageGroup)}"> 
+		<th:block th:if="${counter == navi.currentPage}"><b></th:block>
+			<a th:text="${counter}" th:if="${counter != 0}"
+			 th:href="|javascript:pagingFormSubmit(${counter})|"></a>
+		<th:block th:if="${counter == navi.currentPage}"></b></th:block>
+	</span>
+	
+	<a th:href="|javascript:pagingFormSubmit(${navi.currentPage + 1})|">▶</a> 
+	<a th:href="|javascript:pagingFormSubmit(${navi.currentPage + navi.pagePerGroup})|">▷▷</a>
+	<br><br>
+	
+	<!-- 검색폼 -->
+	<form id="pagingForm" method="get" th:action="@{/board/boardList}">
+		<input type="hidden" name="page" id="page">
+		<select id="type" name="type">
+			<option value="title" th:selected="${type} == 'title'">제목</option>
+			<option value="contents" th:selected="${type} == 'contents'">본문</option>
+			<option value="userid" th:selected="${type} == 'userid'">작성자ID</option>
+			<option value="all" th:selected="${type} == 'all'">전체</option>
+		</select>
+		<input type="text"  name="searchWord" th:value="${searchWord}">
+		<input type="button" onclick="pagingFormSubmit(1)" value="검색">
+	</form>
+	</section>
+	
 </body>
 </html>
