--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,7 +4,13 @@ body {
 }
 
 header {
-    background: linear-gradient(to bottom, #a1c4fd, #c2e9fb); /* 파스텔 톤 그라디언트 배경 */
+    background: linear-gradient(to bottom, #c6a2f2, #5d54a4); /* 라벤더에서 자주색으로 */
+    /*background: linear-gradient(to bottom, #a8e6cf, #11998e);*/ /* 민트에서 에메랄드색으로 */
+    /*background: linear-gradient(to bottom, #e0a96d, #df7861);*/ /* 테라코타에서 샌드색으로 */
+    /*background: linear-gradient(to bottom, #bfc9ca, #a2d9ce);*/ /* 회색에서 하늘색으로 */
+    /*background: linear-gradient(to bottom, #f5f5dc, #ffe4c4);*/ /* 베이지에서 크림색으로 */
+    /*background: linear-gradient(to bottom, #808000, #006400);*/ /* 올리브 그린에서 다크그린으로 이어지는 그라디언트 배경 */
+    /*background: linear-gradient(to bottom, #a1c4fd, #c2e9fb);*/ /* 파스텔 톤 그라디언트 배경 */
     /*background: linear-gradient(to bottom, #6dd5ed, #2193b0);*/ /* 그라디언트 배경 */
     padding: 20px 100px; /* 헤더 패딩 */
     box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* 헤더에 그림자 효과 추가 */
