홈 화면 구현 jk/home.html

--- a/src/main/resources/static/css/header_style.css
+++ b/src/main/resources/static/css/header_style.css
@@ -32,6 +32,9 @@ footer {
     align-items: center;
 }
 
+.logo {
+    padding: 0 40px 0 0;
+}
 .logo img {
     height: 100px; /* 로고 이미지 높이 */
 }
@@ -99,7 +102,7 @@ footer {
 }
 
 .dropbtn {
-  background-color: #ffffff;
+  background-color: #ECECEC;
   color: black;
   padding: 16px;
   font-size: 16px;
