--- a/src/main/resources/static/css/main_style.css
+++ b/src/main/resources/static/css/main_style.css
@@ -6,13 +6,19 @@
     padding: 0;
 }
 
-.board-main {
+.board-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.board-card {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap; /* Allows articles to wrap to the next line if needed */
 }
 
-.board-main article{
+.board-card .card-image{
     width: 45%;
     margin: 10px; /* Add some space around the articles */
     overflow: hidden; /* Ensures the scaled image does not overflow the article bounds */
@@ -21,26 +27,33 @@
 }
 
 /* 비율을 유지하기 위한 패딩 트릭 */
-.board-main article::before {
+.board-card .card-image::before {
     content: '';
     display: block;
     padding-top: 75%; /* 16:9 비율 = 56.25%, 4:3 비율 = 75%*/
     pointer-events: none; /* Ignore mouse events */
 }
 
-.board-main article img {
+.board-card .card-image img {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-  /*max-width: 100%;*/ /* 이미지가 부모 컨테이너를 넘지 않도록 설정 */
-  object-fit: cover; /* 이미지 비율을 유지하면서 컨테이너를 채움 */
-  transition: transform 0.3s ease; /* Smooth transition for the transform effect */
+    object-fit: cover; /* 이미지 비율을 유지하면서 컨테이너를 채움 */
+    transition: transform 0.3s ease; /* Smooth transition for the transform effect */
+}
+
+.board-card .card-content {
+    /* 텍스트 콘텐츠를 위한 스타일 */
+    width: 45%;
+    margin: 10px;
+    transition: transform 0.3s ease;
+    /* 추가 스타일 */
 }
 
 /* Hover effect */
-.board-main article:hover img {
+.board-card article:hover img {
     transform: scale(1.1); /* Enlarges the article on hover */
     z-index: 10; /* Ensure the scaled item is above others */
 }
@@ -48,3 +61,12 @@
 .search-section {
     /*background-color: var(--secondary-color);*/
 }
+
+
+/*프로그램 섹션 스타일*/
+.program-section {
+    display: flex;
+    flex-direction: column;
+}
+
+
