--- a/src/main/resources/static/css/header_style.css
+++ b/src/main/resources/static/css/header_style.css
@@ -15,9 +15,10 @@ body {
 }
 
 header {
+    /*style="background: transparent;"*/
     /*background: linear-gradient(to bottom, #c6a2f2, #5d54a4);*/ /* 라벤더에서 자주색으로 */
     /*background: linear-gradient(to bottom, #a8e6cf, #11998e);*/ /* 민트에서 에메랄드색으로 */
-    background: linear-gradient(to bottom, #e0a96d, #df7861); /* 테라코타에서 샌드색으로 */
+    /*background: linear-gradient(to bottom, #e0a96d, #df7861);*/ /* 테라코타에서 샌드색으로 */
     /*background: linear-gradient(to bottom, #bfc9ca, #a2d9ce);*/ /* 회색에서 하늘색으로 */
     /*background: linear-gradient(to bottom, #f5f5dc, #ffe4c4);*/ /* 베이지에서 크림색으로 */
     /*background: linear-gradient(to bottom, #808000, #006400);*/ /* 올리브 그린에서 다크그린으로 이어지는 그라디언트 배경 */
@@ -34,7 +35,6 @@ main {
 footer {
     padding: 20px 200px; /* 헤더 패딩 */
 }
-
 .header-container {
     width: 100%;
     margin: 0;
