--- a/src/main/resources/templates/jk/home.html
+++ b/src/main/resources/templates/jk/home.html
@@ -14,35 +14,9 @@
 </head>
 <body>
 <!-- 헤더 섹션-->
-<header style="background: transparent;">
 
-	<div class="header-container header-top">
+<header th:replace="layouts/header	::header"></header>
 
-		<div class="logo">
-			<a href="#"><img th:src="@{/img/culture_stay_logo.png}" alt="CultureStay"></a>
-		</div>
-
-		<nav class="menu">
-			<h2><a href="#">프로그램</a></h2>
-			<h2><a href="#">커뮤니티</a></h2>
-		</nav>
-
-
-		<div class="dropdown">
-			<button class="dropbtn" aria-haspopup="true" aria-expanded="false">
-				<i class="fas fa-bars"></i> <!-- 메뉴 아이콘 -->
-				<i class="fas fa-user-circle"></i> <!-- 사용자 아이콘 -->
-			</button>
-			<div class="dropdown-content" aria-label="submenu">
-				<a href="#">회원가입</a>
-				<a href="#">로그인</a>
-				<hr>
-				<a href="#">도움말</a>
-			</div>
-		</div>
-	</div>
-
-</header>
 
 <main>
 	<section class="board-container">
@@ -171,34 +145,9 @@
 	</section>
 </main>
 
-<footer class="site-footer">
-	<div class="footer-content">
-		<div class="footer-section">
-			<h4>회사 정보</h4>
-			<p>회사 소개 및 주소</p>
-		</div>
-		<div class="footer-section">
-			<h4>빠른 링크</h4>
-			<ul>
-				<li><a href="#">홈</a></li>
-				<li><a href="#">서비스</a></li>
-				<li><a href="#">제품</a></li>
-				<li><a href="#">문의하기</a></li>
-			</ul>
-		</div>
-		<div class="footer-section">
-			<h4>연락처</h4>
-			<p>전화번호: 123-456-7890</p>
-			<p>이메일: info@example.com</p>
-		</div>
-	</div>
-	<div class="footer-bottom">
-		<p>© 2024 CultureStay. All Rights Reserved.</p>
-	</div>
-</footer>
 
 
-
+<footer th:replace="layouts/footer::footer"></footer>
 
 </body>
 </html>
