--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <body>
-    <header th:fragment="header" class="header-container header-top">
+    <header th:fragment="header">
         <div class="header-container header-top">
 
             <div class="logo">
@@ -11,10 +11,9 @@
             </div>
 
             <nav class="menu">
-                <h2><a href="#">프로그램</a></h2>
-                <h2><a href="#">커뮤니티</a></h2>
+                <h2><a th:href="@{/board/boardList}" th:text="프로그램"></a></h2>
+                <h2><a th:href="@{/program/list}" th:text="커뮤니티"></a></h2>
             </nav>
-
 
             <div class="dropdown">
                 <button class="dropbtn" aria-haspopup="true" aria-expanded="false">
@@ -22,8 +21,10 @@
                     <i class="fas fa-user-circle"></i> <!-- 사용자 아이콘 -->
                 </button>
                 <div class="dropdown-content" aria-label="submenu">
-                    <a href="#">회원가입</a>
-                    <a href="#">로그인</a>
+                    <div sec:authorize="not isAuthenticated()"><a th:href="@{/member/join}" th:text="회원가입"></a></div>
+                    <div sec:authorize="not isAuthenticated()"><a th:href="@{/member/loginForm}" th:text="로그인"></a></div>
+                    <div sec:authorize="isAuthenticated()"><a th:href="@{/member/logout}" th:text="로그아웃"></a></div>
+                    <div sec:authorize="isAuthenticated()"><a th:href="@{/member/update}" th:text="회원정보수정"></a></div>
                     <hr>
                     <a href="#">도움말</a>
                 </div>
