home 화면 구현 마무리

--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -7,12 +7,12 @@
         <div class="header-container header-top">
 
             <div class="logo">
-                <a href="#"><img th:src="@{/img/culture_stay_logo.png}" alt="CultureStay"></a>
+                <a th:href="@{/}"><img th:src="@{/img/culture_stay_logo.png}" alt="CultureStay"></a>
             </div>
 
             <nav class="menu">
-                <h2><a th:href="@{/board/boardList}" th:text="프로그램"></a></h2>
-                <h2><a th:href="@{/program/list}" th:text="커뮤니티"></a></h2>
+                <h2><a th:href="@{/program/list}" th:text="프로그램"></a></h2>
+                <h2><a th:href="@{/board/boardList}" th:text="커뮤니티"></a></h2>
             </nav>
 
             <div class="dropdown">
