--- a/src/main/resources/templates/jk/test.html
+++ b/src/main/resources/templates/jk/test.html
@@ -98,8 +98,20 @@
 		</div>
 
 		<div class="board-card">
-			<article class="card-image">
-				<img th:src="@{/img/board/img_3.png}" alt="게시글 이미지">
+			<article class="image-article">
+				<div class="image-container">
+					<div class="image-wrapper">
+						<img th:src="@{/img/board/img_2.png}" alt="게시글 이미지">
+					</div>
+
+					<div class="image-wrapper">
+						<img th:src="@{/img/board/img_3.png}" alt="게시글 이미지">
+					</div>
+				</div>
+
+				<div class="image-container-sub">
+					<h4>프로그램 이름</h4>
+				</div>
 			</article>
 
 			<article class="content-article">
@@ -114,43 +126,6 @@
 	</section>
 
 	<br><br>
-
-	<section class="board-container">
-		<div class="board-title">
-			<h2>인기 Best</h2>
-			<div class="add_link"><a href="#">더보기</a></div>
-		</div>
-
-		<div class="board-card">
-			<article class="card-image">
-				<img th:src="@{/img/board/img_2.png}" alt="게시글 이미지">
-			</article>
-
-			<article class="content-article">
-				<h2>제목</h2>
-				<p>콘텐츠</p>
-				<div class="content-article-footer">
-					<p>#태그 #태그 </p>
-					<p>$999,999</p>
-				</div>
-			</article>
-		</div>
-
-		<div class="board-card">
-			<article class="card-image">
-				<img th:src="@{/img/board/img_3.png}" alt="게시글 이미지">
-			</article>
-
-			<article class="content-article">
-				<h2>제목</h2>
-				<p>콘텐츠</p>
-				<div class="content-article-footer">
-					<p>#태그 #태그 </p>
-					<p>$999,999</p>
-				</div>
-			</article>
-		</div>
-	</section>
 
 	<section>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
