--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -11,8 +11,8 @@
             </div>
 
             <nav class="menu">
-                <h2><a th:href="@{/board/boardList}" th:text="프로그램"></a></h2>
-                <h2><a th:href="@{/program/list}" th:text="커뮤니티"></a></h2>
+                <h2><a th:href="@{/program/list}" th:text="프로그램"></a></h2>
+                <h2><a th:href="@{/board/boardList}" th:text="커뮤니티"></a></h2>
             </nav>
 
             <div class="dropdown">
