--- a/src/main/resources/templates/program/list.html
+++ b/src/main/resources/templates/program/list.html
@@ -29,5 +29,20 @@
 			<td th:text="${programList.hits}"></td>
 		</tr>
 	</table>
+	
+		
+	<!-- 검색폼 -->
+	<form id="pagingForm" method="get" th:action="@{/board/boardList}">
+		<input type="hidden" name="page" id="page">
+		<select id="type" name="type">
+			<option value="title" th:selected="${type} == 'title'">제목</option>
+			<option value="contents" th:selected="${type} == 'contents'">본문</option>
+			<option value="memberid" th:selected="${type} == 'memberid'">작성자ID</option>
+			<option value="all" th:selected="${type} == 'all'">전체</option>
+		</select>
+		<input type="text"  name="searchWord" th:value="${searchWord}">
+		<input type="button" onclick="pagingFormSubmit(1)" value="검색">
+	</form>
+	
 </body>
 </html>
