--- a/src/main/resources/templates/program/detail.html
+++ b/src/main/resources/templates/program/detail.html
@@ -6,5 +6,14 @@
 </head>
 <body>
 <h2>프로그램 디테일</h2>
+
+-사진<br>
+-기본정보(제목,호스트, 위치, 리뷰, 가격, 날짜, 조회수)<br>
+-컨텐츠<br>
+-프로그램 태그(접근성 및 편의시설, 건물유형, 위치지도?,호스트언어,태그)<br>
+-좋아요, 북마크 상태(0이면 없음, 1이면 있음)
+<br>
+	<a th:href="@{/program/apply}" th:text="신청하기"></a>
+
 </body>
 </html>
