--- a/src/main/resources/templates/program/list.html
+++ b/src/main/resources/templates/program/list.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+<link rel="stylesheet" th:href="@{/css/header_style.css}">
+
 </head>
 <body>
 <h2>프로그램 리스트</h2>
 
 
-
+	<a th:href="@{/program/write}" th:text="글쓰기"></a>
+<br><br><br>
 <table>
-	
+
 		<tr>
 			<th>글번호</th>
 			<th>작성자</th>
@@ -30,19 +36,30 @@
 		</tr>
 	</table>
 	
-		
-	<!-- 검색폼 -->
-	<form id="pagingForm" method="get" th:action="@{/board/boardList}">
-		<input type="hidden" name="page" id="page">
-		<select id="type" name="type">
-			<option value="title" th:selected="${type} == 'title'">제목</option>
-			<option value="contents" th:selected="${type} == 'contents'">본문</option>
-			<option value="memberid" th:selected="${type} == 'memberid'">작성자ID</option>
-			<option value="all" th:selected="${type} == 'all'">전체</option>
-		</select>
-		<input type="text"  name="searchWord" th:value="${searchWord}">
-		<input type="button" onclick="pagingFormSubmit(1)" value="검색">
-	</form>
+		<!-- 검색폼 -->
+
+	<section class="search-section">
+		<div class="header-container header-bottom">
+			<div class="search-bar">
+				<!-- 지역 입력란 -->
+				<input type="text" placeholder="지역 검색" aria-label="지역">
+
+				<!-- 체크인 날짜 선택 -->
+				<input type="date" aria-label="체크인 날짜">
+
+				<!-- 체크아웃 날짜 선택 -->
+				<input type="date" aria-label="체크아웃 날짜">
+
+				<!-- 프로그램 입력란 -->
+				<input type="text" placeholder="프로그램 검색" aria-label="프로그램">
+
+				<!-- 검색 버튼 -->
+				<button type="submit" aria-label="검색">
+					<span class="icon-search"><i class="fas fa-search"></i></span> <!-- Font Awesome 검색 아이콘 -->
+				</button>
+			</div>
+		</div>
+	</section>
 	
 </body>
 </html>
