홈html 리스트 연결

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -67,7 +67,7 @@
 	<section class="board-container">
 		<div class="board-title">
 			<h2>00님을 위한 추천 프로그램</h2>
-			<div class="add_link"><a th:href="@{/program/list}">더보기</a></div>
+			<div class="add_link"><a th:href="@{/program/recommend}">더보기</a></div>
 		</div>
 
 		<div class="board-card">
@@ -106,7 +106,7 @@
 	<section class="board-container">
 		<div class="board-title">
 			<h2>인기 Best</h2>
-			<div class="add_link"><a href="#">더보기</a></div>
+			<div class="add_link"><a th:href="@{/program/popular}">더보기</a></div>
 		</div>
 
 		<div class="board-card">
