--- a/src/main/resources/static/css/main_style_test.css
+++ b/src/main/resources/static/css/main_style_test.css
@@ -6,12 +6,12 @@
     padding: 0;
 }
 
-.board-title {
+.board-title-right {
     display: flex;
-    justify-content: space-between;
+/*    justify-content: space-between;*/
+    justify-content: flex-end;
     align-items: baseline;
 }
-
 
 
 
