--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -1,60 +1,24 @@
 <!DOCTYPE html>
-<html xmlns:th="thymeleaf.org">
+<html xmlns:th="thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<meta charset="UTF-8">
-<title>community</title>
+	<meta charset="UTF-8">
+	<title>Home</title>
 	<link rel="stylesheet" th:href="@{/css/header_style.css}">
-	<link rel="stylesheet" th:href="@{/css/main_style.css}">
+	<link rel="stylesheet" th:href="@{/css/main_style_test.css}">
 	<link rel="stylesheet" th:href="@{/css/footer.css}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-<!-- 페이지 이동 스크립트  -->
-<script>
-function pagingFormSubmit(currentPage) {
-	var form = document.getElementById('pagingForm');
-	let page = document.querySelector('#page');
-	page.value = currentPage;
-	form.submit();
-}
-</script>
+	<style>
+
+	</style>
 </head>
 <body>
 
 <!-- 헤더 섹션-->
 <header th:replace="layouts/header::header"></header>
 
+
 <main>
-	<br><br>
-
-	<section class="search-section">
-		<div class="header-container header-bottom">
-			<div class="search-bar">
-				<form id="pagingForm" method="get" th:action="@{/board/boardList}">
-					<input type="hidden" name="page" id="page">
-
-					<!-- 지역 입력란 -->
-		<!--			<input type="text" placeholder="지역 검색" aria-label="지역">-->
-					<select id="type" name="type">
-						<option value="title" th:selected="${type} == 'title'">제목</option>
-						<option value="contents" th:selected="${type} == 'contents'">본문</option>
-						<option value="userid" th:selected="${type} == 'userid'">작성자ID</option>
-						<option value="all" th:selected="${type} == 'all'">전체</option>
-					</select>
-
-					<!-- 게시글 입력란 -->
-					<input type="text" name="searchWord" th:value="${searchWord}" placeholder="게시글 검색" aria-label="게시글">
-
-					<!-- 검색 버튼 -->
-					<button type="submit" aria-label="검색" onclick="pagingFormSubmit(1)">
-						<span class="icon-search"><i class="fas fa-search"></i></span> <!-- Font Awesome 검색 아이콘 -->
-					</button>
-
-				</form>
-			</div>
-		</div>
-	</section>
-
-	<br><br>
-
 	<section class="board-container">
 		<div class="board-title">
 			<h2>인기 게시글 or 최신</h2>
@@ -71,61 +35,79 @@ function pagingFormSubmit(currentPage) {
 		</div>
 	</section>
 
-
+	<br><br>
+	<hr>
 	<br><br>
 
-	
-	<table>
-		<tr>
-			<td class="white">전체
-				<span th:text="${navi.totalRecordsCount}"></span>
-			</td>
-			<td class="white" colspan="3"></td>
-			<td class="white">
-				<a th:href="@{/board/write}">글쓰기</a>
-				<a th:href="@{/}">홈</a>
-			</td>
-		</tr>
-		<tr>
-			<th>글번호</th>
-			<th>작성자</th>
-			<th style="width:230px;">제목</th>
-			<th>조회수</th>
-			<th style="width:150px;">작성일</th>
-		</tr>
-		<!-- controller에서 model로 부터 받아온 데이터를 출력하는 부분 -->
-		<tr th:each="board : ${boardList}">
-			<td th:text="${board.boardnum}"></td>
-			<td th:text="${board.userid}"></td>
-			<td>
-				<a th:href="@{/board/read(boardnum=${board.boardnum})}" 
-				   th:text="${board.title}"></a>
-			</td>
-			<td th:text="${board.hits}"></td>
-			<td th:text="${board.inputdate}"></td>
-		</tr>
-	</table>
+	<section class="search-section">
+		<div class="header-container header-bottom">
+			<div class="search-bar">
+				<!-- 지역 입력란 -->
+				<input type="text" placeholder="지역 검색" aria-label="지역">
 
-	<section>
-	<!-- 페이지 이동 링크 -->     
-	<a th:href="|javascript:pagingFormSubmit(${navi.currentPage - navi.pagePerGroup})|">◁◁</a>
-	<a th:href="|javascript:pagingFormSubmit(${navi.currentPage - 1})|">◀</a> 
+				<!-- 프로그램 입력란 -->
+				<input type="text" placeholder="프로그램 검색" aria-label="프로그램">
 
-	<span th:each="counter : ${#numbers.sequence(navi.startPageGroup, navi.endPageGroup)}"> 
-		<th:block th:if="${counter == navi.currentPage}"><b></th:block>
-			<a th:text="${counter}" th:if="${counter != 0}"
-			 th:href="|javascript:pagingFormSubmit(${counter})|"></a>
-		<th:block th:if="${counter == navi.currentPage}"></b></th:block>
-	</span>
-	
-	<a th:href="|javascript:pagingFormSubmit(${navi.currentPage + 1})|">▶</a> 
-	<a th:href="|javascript:pagingFormSubmit(${navi.currentPage + navi.pagePerGroup})|">▷▷</a>
-	<br><br>
-	
-
+				<!-- 검색 버튼 -->
+				<button type="submit" aria-label="검색">
+					<span class="icon-search"><i class="fas fa-search"></i></span> <!-- Font Awesome 검색 아이콘 -->
+				</button>
+			</div>
+		</div>
 	</section>
 
-	<br><br><br><br><br><br><br><br>
+	<br><br>
+
+<!--
+<tr th:each="board : ${boardList}">
+	<td th:text="${board.boardnum}"></td>
+	<td th:text="${board.userid}"></td>
+	<td>
+		<a th:href="@{/board/read(boardnum=${board.boardnum})}"
+		   th:text="${board.title}"></a>
+	</td>
+	<td th:text="${board.hits}"></td>
+	<td th:text="${board.inputdate}"></td>
+</tr>
+-->
+	<section class="board-container">
+		<div class="board-title-right">
+			<div class="add_link"><a th:href="@{/board/write}">글쓰기</a></div>
+		</div>
+
+		<div class="board-card" th:each="board : ${boardList}">
+			<article class="image-article">
+				<div class="image-container">
+					<div class="image-wrapper">
+						<img th:src="@{/img/board/img_2.png}" alt="게시글 이미지">
+					</div>
+
+					<div class="image-wrapper">
+						<img th:src="@{/img/board/img_3.png}" alt="게시글 이미지">
+					</div>
+				</div>
+
+				<div class="image-container-sub">
+					<h4 th:text="${board.title}">프로그램 이름</h4>
+				</div>
+			</article>
+
+			<article class="content-article">
+				<h2>제목</h2>
+				<p th:text="${board.title}">콘텐츠</p>
+				<div class="content-article-footer">
+					<p>#태그 #태그 </p>
+					<p>$999,999</p>
+				</div>
+			</article>
+		</div>
+	</section>
+
+	<br><br>
+
+	<section>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	</section>
 </main>
 
 <footer th:replace="layouts/footer::footer"></footer>
