--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -8,9 +8,8 @@
 	<link rel="stylesheet" th:href="@{/css/main_style_test.css}">
 	<link rel="stylesheet" th:href="@{/css/footer.css}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-	<style>
 
-	</style>
+
 </head>
 <body>
 
@@ -87,17 +86,16 @@
 					</div>
 				</div>
 
-				<div class="image-container-sub">
+				<div class="image-container-sub click-to-detail" th:data-boardnum="${board.boardnum}">
 					<h4 th:text="${board.title}">프로그램 이름</h4>
 				</div>
 			</article>
 
 			<article class="content-article">
-				<h2>제목</h2>
-				<p th:text="${board.title}">콘텐츠</p>
+<!--				<h2>제목</h2>-->
+				<p class="click-to-detail" th:data-boardnum="${board.boardnum}" th:text="${board.contents}">콘텐츠</p>
 				<div class="content-article-footer">
 					<p>#태그 #태그 </p>
-					<p>$999,999</p>
 				</div>
 			</article>
 		</div>
@@ -112,5 +110,6 @@
 
 <footer th:replace="layouts/footer::footer"></footer>
 
+<script th:src="@{/js/script.js}"></script>
 </body>
 </html>
