--- a/src/main/resources/templates/board/readForm.html
+++ b/src/main/resources/templates/board/readForm.html
@@ -14,17 +14,17 @@
 			location.href = 'delete?boardnum=' + boardnum;
 		}
 	}
-	
+
 	//리플 삭제
 	function deleteReply(replynum, boardnum){
 		if(confirm('삭제하시겠습니까?')) {
-			location.href = '../reply/deleteReply?replynum=' 
+			location.href = '../reply/deleteReply?replynum='
 					+ replynum + '&boardnum=' + boardnum;
 		}
 	}
 	let recommend = document.querySelector('#recommend');
 	function recommend(boardnum){
-		
+
 	}
 
 </script>
@@ -60,16 +60,18 @@
 		<tr>
 			<th>첨부파일</th>
 			<td colspan="5" style="text-align: left;">
-				<a th:href="@{/board/download(boardnum=${board.boardnum})}" 
+				<a th:href="@{/board/download(boardnum=${board.boardnum})}"
 				th:text="${board.originalfile}"></a>
 			</td>
 		</tr>
-		
+
 	</table>
 	<div>
-		<a th:href="" id="recommend">추천</a>
+		<a href="#" id="recommend">추천</a>
 	</div>
-	<div th:if="${#authentication.name == board.userid}" style="text-align: center;">
+
+<!--	th:if="${#authentication.name == board.userid}"-->
+	<div  style="text-align: center;">
 		<a th:href="@{/board/boardList}">목록</a>
 		<a th:href="@{/board/update(boardnum=${board.boardnum})}">수정</a>
 		<a th:href="|javascript:deleteFunc(${board.boardnum})|">삭제</a>
@@ -83,7 +85,7 @@
 			<input type="text" name="content" style="width: 500px;">
 			<input type="submit" value="확인">
 		</form>
-		
+
 		<!-- 리플 목록 출력 -->
 		<table class="reply">
 			<tr th:each="reply : ${replyList}">
