--- a/src/main/resources/templates/program/list.html
+++ b/src/main/resources/templates/program/list.html
@@ -13,7 +13,7 @@
 <h2>프로그램 리스트</h2>
 
 
-	<a th:href="@{/program/write}" th:text="글쓰기"></a>
+	<a sec:authorize="isAuthenticated()" th:href="@{/program/write}" th:text="글쓰기"></a>
 <br><br><br>
 <table>
 
